<resources>
    <string name="app_name">FuelCalculator</string>
    <string name="peoplesInt">1</string>
    <string name="btnSave">Save</string>
    <string name="distance">Distance (km)</string>
    <string name="consumption">Consumption - liters / 100km</string>
    <string name="price">Price per liter of fuel</string>
    <string name="peoples">Peoples</string>
    <string name="calculate">Calculate</string>
    <string name="inputError">Input Error</string>
    <string name="money">$</string>
    <string name="result">Result:</string>
    <string name="Null">0</string>
    <string name="clear">Clear</string>
</resources>