<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_on_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Button"
                    android:background="@drawable/button"
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/btnSave"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.15"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/distance"
            android:inputType="number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKm"
                style="@style/EditDec" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/consumption"
            android:inputType="number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCons"
                style="@style/EditDec"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrice"
                style="@style/EditDec"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/peoples"
                android:gravity="center"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPeopleMinus"
                    style="@style/ButtonPeople"
                    android:layout_width="match_parent"
                    android:layout_weight="0.3"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_baseline_keyboard_double_arrow_left_24"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:iconPadding="0dp"
                    android:drawablePadding="0dp"/>

                <TextView
                    android:id="@+id/textViewPeople"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/peoplesInt"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/ButtonPeople"
                    android:id="@+id/btnPeoplePlus"
                    android:layout_width="match_parent"
                    android:layout_weight="0.3"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_baseline_keyboard_double_arrow_right_24"
                    android:layout_gravity="center"
                    app:iconPadding="0dp"
                    android:drawablePadding="0dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <com.google.android.material.button.MaterialButton
            style="@style/Button"
            android:background="@drawable/button"
            android:id="@+id/btn_calc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:text="@string/calculate"
            />

    </LinearLayout>



</LinearLayout>